fix quotes issue

--- a/Patchwork/tests/ingress.yml
+++ b/Patchwork/tests/ingress.yml
@@ -2,16 +2,12 @@
 kind: Ingress
 metadata:
   name: monitoring
-  namespace: monitoring
+  namespace: prod-monitoring
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1    
 spec:
-  tls:
-  - secretName: tls-test
-    hosts:
-    - test.com
+  tls: []
   rules:
   - host: test.com
     http:
